# agents

./: .gitignore  AGENTS.md  CONTRIBUTING.md  agents.md
.github/workflows/: responses-api-test.yml
adr/: adr-open-ai-responses-api-like.md  adr-responses-api.md  minimal-sdk.md  pr-triage.md
agent-plugins/.claude-plugin/: marketplace.json
agents_tracing-eval_mlflow/: readme.md
agents_tracing-eval_mlflow/log_monitor/: log_monitor_agent.ipynb  mlflow.db  readme.md
agents_tracing-eval_mlflow/nps_agent/: mlflow.db  nps_agent.ipynb  readme.md
benchmarking/: README.md
benchmarking/gpt-oss-rhoai-compare/: README.md  bench_configs.py  supporting-blog.md
benchmarking/significance-testing/: README.md  bfcl_loader.py  bootstrap.py  example.json  requirements.txt  significance_test.py
connectors/: connector_example.ipynb
examples/: README.md  run.yaml
examples/agents_tracing-eval_mlflow/: readme.md  requirements.txt
examples/ai_assistant_for_troubleshooting_apps/: README.md  crew.py  main.py  orchestrator.py  pyproject.toml
examples/github-mcp/: README.md  github-mcp-example.py
examples/gsuite-mcp/: README.md  google-doc-mcp-example.py
examples/log-monitor-agent/: README.md  pyproject.toml  run_examples.py
examples/log-monitor-agent/log_monitor_agent/: __main__.py  agent.py  llm.py  tools.py
examples/log-monitor-agent/log_monitor_agent/tests/: __init__.py  test_agent.py  test_tools.py
examples/servicenow-mcp/: README.md  (+1 more)
tests/: run_responses_api_tests.sh
validation-vllm/: readme.md
validation-vllm-gptoss/: GPT-OSS-20b with vLLM.ipynb  readme.md
(+94 files in other folders)
